test/results/whitespace-unsupported.owltest.stderr
error: specifying whitespace is unsupported in versions before owl.v3

  #using owl.v2
         ~~~~~~
  .whitespace 'x'
  ~~~~~~~~~~~~~~~

